--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 /* App.css */
-body {
+/* body {
   font-family: Arial, sans-serif;
   background-color: #cac8c800;
   color: #fff;
@@ -58,4 +58,4 @@ body {
   margin: 10px 0 0;
   color: red;
   font-size: 14px;
-}
+} */
