--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,67 +1,145 @@
-/* Login.css */
-
-.Login {
-    max-width: 350px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #bdbbbb;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+.foorm-container {
+    width: 350px;
+    height: 520px;
+    background-color: #dbd3d370;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    margin-left: 450px;
+    padding: 20px 30px;
+    margin-top: 30px;
 }
 
-.Login h2 {
+.ttitle {
     text-align: center;
-    margin-bottom: 20px;
-    color: #333333;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    margin: 10px 0 30px 0;
+    font-size: 28px;
+    font-weight: 800;
+    color: #a7a2a2;
 }
 
-.Login form {
+.form {
+    width: 100%;
     display: flex;
     flex-direction: column;
-}
-
-.Login label {
-    margin-bottom: 10px;
-    color: #555555;
-}
-
-.Login input[type="text"],
-.Login input[type="password"] {
-    width: 100%;
-    padding: 10px;
+    gap: 18px;
     margin-bottom: 15px;
-    border: 1px solid #dddddd;
-    border-radius: 5px;
-    font-size: 16px;
 }
 
-.Login button {
-    margin-top: 10px;
-    padding: 12px;
-    border: none;
-    border-radius: 5px;
-    background-color: #007bff;
-    color: #ffffff;
-    font-size: 16px;
+.input {
+    border-radius: 20px;
+    border: 1px solid #c0c0c0;
+    outline: 0 !important;
+    box-sizing: border-box;
+    padding: 12px 15px;
+}
+
+.page-link {
+    text-decoration: underline;
+    margin: 0;
+    text-align: end;
+    color: #747474;
+    text-decoration-color: #747474;
+}
+
+.page-link-label {
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-size: 9px;
+    font-weight: 700;
 }
 
-.Login button:hover {
-    background-color: #0056b3;
+.page-link-label:hover {
+    color: #000;
 }
 
-.Login label,
-.RegisterForm label {
-    position: relative;
+.form-btn {
+    padding: 10px 15px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    border-radius: 20px;
+    border: 0 !important;
+    outline: 0 !important;
+    background: teal;
+    color: white;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.form-btn:active {
+    box-shadow: none;
+}
+
+.sign-up-label {
+    margin: 0;
+    font-size: 25px;
+    color: #cec4c4;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.sign-up-link {
+    margin-left: 1px;
+    font-size: 11px;
+    text-decoration: underline;
+    text-decoration-color: teal;
+    color: teal;
+    cursor: pointer;
+    font-weight: 800;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.buttons-container {
+    width: 100%;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: 20px;
+    gap: 15px;
 }
 
-.Login input[type="password"]+span,
-.RegisterForm input[type="password"]+span {
-    position: absolute;
-    right: 6px;
+.apple-login-button,
+.google-login-button {
+    border-radius: 20px;
+    box-sizing: border-box;
+    padding: 10px 15px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+        rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-size: 11px;
+    gap: 5px;
+}
+
+.apple-login-button {
+    background-color: #000;
+    color: #fff;
+    border: 2px solid #000;
+}
+
+.google-login-button {
+    border: 2px solid #747474;
+}
+
+.apple-icon,
+.google-icon {
+    font-size: 18px;
+    margin-bottom: 1px;
+}
+
+.aadmin {
+    color: rgb(160, 159, 159);
+    font-size: 20px;
+}
+
+.sign-up-link {
+    font-size: 20px;
 }
