--- a/src/components/RegisterForm.css
+++ b/src/components/RegisterForm.css
@@ -1,79 +1,105 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #9c9b9b;
+.form-container {
+    width: 350px;
+    height: auto;
+    background-color: #eeccccb6;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    padding: 20px 30px;
+    margin-left: 450px;
 }
 
-.RegisterForm {
-    max-width: 300px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #bdbdbd;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+.title {
     text-align: center;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    margin: 10px 0 30px 0;
+    font-size: 28px;
+    font-weight: 800;
 }
 
-.RegisterForm h2 {
-    margin-bottom: 10px;
-    color: #333333;
-    font-size: 1.3rem;
-    width: 200px;
+.sub-title {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    color: #6b6f82;
+    margin-bottom: 30px;
 }
 
-.RegisterForm form {
+.form {
     display: flex;
     flex-direction: column;
+    gap: 15px;
 }
 
-.RegisterForm label {
-    margin-bottom: 10px;
-    color: #555555;
-    text-align: left;
-
-}
-
-.RegisterForm input[type="text"],
-.RegisterForm input[type="email"],
-.RegisterForm input[type="tel"],
-.RegisterForm input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 1px;
-    border: 1px solid #dddddd;
+.input {
+    height: 50px;
+    padding: 0 10px;
+    border: 1px solid #ddd;
     border-radius: 5px;
-    font-size: 14px;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.RegisterForm button {
-    margin-top: 15px;
-    padding: 12px;
+.form-btn {
+    height: 50px;
+    background-color: #ff6363;
     border: none;
     border-radius: 5px;
-    background-color: #007bff;
-    color: #ffffff;
-    font-size: 14px;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s;
 }
 
-.RegisterForm button:hover {
-    background-color: #0056b3;
+.form-btn:hover {
+    background-color: #e55252;
 }
 
-.Login label,
-.RegisterForm label {
-    position: relative;
+.sign-up-label {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    margin-top: 20px;
+}
+
+.sign-up-link {
+    color: #ff6363;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.sign-up-link:hover {
+    text-decoration: underline;
+}
+
+.buttons-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.apple-login-button,
+.google-login-button {
     display: flex;
     align-items: center;
+    justify-content: center;
+    gap: 10px;
+    height: 40px;
+    width: 48%;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
 
-.Login input[type="password"]+span,
-.RegisterForm input[type="password"]+span {
-    position: absolute;
-    right: 6px;
-    cursor: pointer;
+.apple-login-button:hover,
+.google-login-button:hover {
+    background-color: #f5f5f5;
+}
+
+.apple-icon,
+.google-icon {
+    font-size: 20px;
 }
