--- a/src/components/AdminLogin.css
+++ b/src/components/AdminLogin.css
@@ -3,73 +3,94 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    font-family: 'Arial', sans-serif;
+    background-color: #282c34;
 }
 
 .admin-login-form {
-    background: white;
-    padding: 2rem;
+    background: #20232a;
+    padding: 2em;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    width: 320px;
+    /* Adjust width as needed */
+}
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.form-heading {
     text-align: center;
+    margin-bottom: 1em;
+    color: #ffffff;
+    font-size: 1.5em;
 }
 
-.admin-login-form h2 {
-    margin-bottom: 1.5rem;
-    font-size: 1.8rem;
-    color: #333;
-    font-weight: bold;
+.form-field {
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+    border-radius: 25px;
+    padding: 0.6em;
+    background-color: #171717;
+    box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
 }
 
-.admin-login-input {
-    width: 100%;
-    padding: 0.75rem;
-    margin-bottom: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 1rem;
+.input-icon {
+    height: 1.3em;
+    width: 1.3em;
+    fill: white;
 }
 
-.admin-login-input:focus {
-    border-color: #6e8efb;
-    box-shadow: 0 0 8px rgba(110, 142, 251, 0.2);
-    outline: none;
-}
-
-.admin-login-button {
-    width: 100%;
-    padding: 0.75rem;
-    background: #0fd45b;
-    color: white;
+.input-field {
+    flex: 1;
+    background: none;
     border: none;
+    outline: none;
+    color: #d3d3d3;
+}
+
+.form-actions {
+    display: flex;
+    justify-content: center;
+    margin-top: 1.5em;
+}
+
+.submit-button {
+    padding: 0.5em 1em;
     border-radius: 5px;
-    font-size: 1rem;
+    border: none;
+    outline: none;
+    transition: background-color 0.4s ease-in-out;
+    background-color: #252525;
+    color: white;
     cursor: pointer;
-    transition: background 0.3s;
 }
 
-.admin-login-button:hover {
-    background: #5a77d4;
+.submit-button:hover {
+    background-color: #333333;
 }
 
-.admin-login-error {
-    margin-top: 1rem;
+.error-message {
     color: red;
-    font-size: 0.9rem;
+    text-align: center;
+    margin-top: 1em;
 }
 
 .return-to-login {
-    margin-top: 1rem;
-    font-size: 0.9rem;
+    text-align: center;
+    margin-top: 1em;
+    color: #61dafb;
 }
 
 .return-to-login a {
-    color: #6e8efb;
+    color: #61dafb;
     text-decoration: none;
+    transition: color 0.2s;
 }
 
 .return-to-login a:hover {
-    text-decoration: underline;
-    color: red;
-    transition: 0.4s;
+    color: #9ad1fa;
 }
