--- a/src/components/Reviews.css
+++ b/src/components/Reviews.css
@@ -1,3 +1,22 @@
+body.dark-mode {
+    background-color: #121212;
+    color: #ffffff;
+}
+
+.reviews-container {
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin: 20px 0;
+    background-color: #f5f5f5;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.reviews-container.dark-mode {
+    background-color: #333;
+    color: #ffffff;
+}
+
 .star-rating {
     font-size: 30px;
 }
@@ -10,14 +29,6 @@
     color: gold;
 }
 
-.reviews-container {
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin: 20px 0;
-}
-
-
 .review-item {
     border: 1px solid #eee;
     padding: 15px;
@@ -26,7 +37,6 @@
     background-color: #f9f9f952;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
-
 
 .review-header {
     display: flex;
@@ -65,10 +75,46 @@
     color: #f44336;
 }
 
-
 .divider-line {
     width: 100%;
     height: 1px;
     background-color: #cccccc31;
     margin: 10px 0;
+}
+
+form {
+    margin-bottom: 20px;
+}
+
+form div {
+    margin-bottom: 10px;
+}
+
+form label {
+    display: block;
+    font-weight: bold;
+}
+
+form textarea {
+    width: 100%;
+    height: 100px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 1em;
+}
+
+form button {
+    padding: 10px 20px;
+    background-color: #ff6347;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 1em;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+form button:hover {
+    background-color: #e5533d;
 }
