--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,72 @@
 .footer {
-    color: white;
-    background-color: #333;
-    margin-top: 40vh;
+    margin-top: 200px;
+    background-color: #1a1a1a;
+    color: orange;
+    padding: 0.5rem 0;
+}
+
+.footer:hover {
+    box-shadow: 2px 2px 20px yellow;
+    filter: drop-shadow(2px 2px 20px gold);
+
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.footer-section {
+    margin: 1rem 0;
+}
+
+.footer-title {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.footer-section ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-section ul li {
+    margin-bottom: 0.5rem;
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 0.5rem;
+    margin-top: 0.5rem;
+}
+
+.footer-legal {
+    display: flex;
+}
+
+.footer-legal ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+}
+
+.footer-legal ul li {
+    margin-right: 1rem;
+}
+
+.footer-social {
+    display: flex;
+    gap: 1rem;
+}
+
+.footer-social svg {
+    font-size: 1.5rem;
+}
+
+.footer-top a {
+    color: #fff;
+    text-decoration: none;
 }
