--- a/src/components/Bookmark.css
+++ b/src/components/Bookmark.css
@@ -1,9 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
 .container {
     padding: 20px;
 }
@@ -25,15 +19,23 @@ h2 {
     align-items: center;
 }
 
+.create-event-bookmark .col {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .create-event-bookmark .col input {
-    width: 100%;
     padding: 8px;
     border-radius: 15px;
     text-align: center;
+    display: flex;
+
 }
 
 .create-event-bookmark .col-auto button {
     margin-left: 10px;
+
 }
 
 .event-bookmark-card {
@@ -72,6 +74,30 @@ h2 {
     text-align: center;
 }
 
+.col-auto {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.btn-primary {
+    background-color: blue;
+    padding: 4px;
+    border-radius: 4px;
+}
+
+.btn-primary:hover {
+    background-color: gold;
+}
+
 .event-bookmark-card .col-auto button {
     margin-left: 10px;
+    padding: 10px;
+}
+
+.h3-bookmark {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
