--- a/src/components/Reviews.css
+++ b/src/components/Reviews.css
@@ -1,71 +1,112 @@
-.review-edit-btn {
-    background-color: blue;
-    margin: 20px;
-    padding: 6px;
-    border-radius: 4px;
+.reviews-container {
+    padding: 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
 }
 
-.review-edit-btn:hover {
-    filter: drop-shadow(2px 2px 20px orange);
-    box-shadow: 2px 2px 20px yellow;
+.reviews-container.dark-mode {
+    background-color: #333;
+    color: #ffffff;
 }
 
-.delete-review-btn {
-    background-color: green;
-    margin: 10px;
-    padding: 6px;
-    border-radius: 4px;
+.star-rating {
+    font-size: 30px;
 }
 
-.delete-review-btn:hover {
-    filter: drop-shadow(2px 2px 20px yellow);
-    box-shadow: 2px 2px 20px blue;
+.star {
+    cursor: pointer;
 }
 
-.list-review {
-    color: white;
+.star.selected {
+    color: gold;
 }
 
-.review-btn {
-    background-color: blue;
-    margin: 10px;
-    align-items: center;
-    padding: 6px;
-    border-radius: 4px;
-    color: white;
+.review-item {
+    border: 1px solid #eee;
+    padding: 15px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    background-color: #f9f9f952;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
-.review-btn:hover {
-    box-shadow: 2px 2px 20px yellow;
-    background-color: green;
-}
-
-.div-element {
+.review-header {
     display: flex;
     align-items: center;
-    justify-content: center;
-    border-radius: 8px;
-
+    justify-content: space-between;
+    margin-bottom: 10px;
 }
 
-.div-element label {
+.reviewer-name {
+    font-weight: bold;
+    margin-right: 10px;
+}
+
+.review-date {
+    color: white;
+}
+
+.review-body {
+    margin-bottom: 10px;
+}
+
+.review-actions {
+    display: flex;
+    align-items: center;
+}
+
+.delete-button {
+    background-color: transparent;
+    border: none;
+    color: #888;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+.delete-button:hover {
+    color: #f44336;
+}
+
+.divider-line {
+    width: 100%;
+    height: 1px;
+    background-color: #cccccc31;
+    margin: 10px 0;
+}
+
+form {
+    margin-bottom: 20px;
+}
+
+form div {
+    margin-bottom: 10px;
+}
+
+form label {
     display: block;
-    font-size: 16px;
-    color: black;
-    margin-bottom: 10px;
+    font-weight: bold;
 }
 
-.div-element input[type="text"] {
-    width: calc(60% - 20px);
-    padding: 8px;
-    margin-bottom: 10px;
+form textarea {
+    width: 100%;
+    height: 100px;
+    padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    font-size: 1em;
 }
 
-.div-element input[type="number"] {
-    width: calc(10% - 20px);
-    border-radius: 4px;
-    padding: 2px;
+form button {
+    padding: 10px 20px;
+    background-color: #ff6347;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 1em;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
 
+form button:hover {
+    background-color: #e5533d;
 }
