--- a/src/components/ExploreEvents.css
+++ b/src/components/ExploreEvents.css
@@ -264,6 +264,7 @@
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     width: 300px;
     text-align: center;
+    color: gray;
 }
 
 .summary-card h2 {
@@ -432,7 +433,7 @@
     margin-top: 10px;
     padding: 10px;
     background-color: #28a745;
-    color: white;
+    color: rgb(78, 75, 75);
     border: none;
     border-radius: 5px;
     cursor: pointer;
